# trading-bot

./: .gitignore  README.md  make.bat  make.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml
example/: demo_backtest_btcusdt.ipynb  demo_backtest_msft.ipynb  demo_download.py
tests/: __init__.py  test_account.py  test_balance.py  test_candlestick.py  test_config.py  test_database.py  test_exchange.py  test_order.py  test_position.py  test_smacross.py  test_strategy.py  test_transaction.py  test_util.py
tests/__snapshots__/: test_candlestick.ambr  test_smacross.ambr  test_strategy.ambr
tradingbot/: __init__.py  __main__.py  account.py  balance.py  bot.py  config.py  config_example.toml  database.py  exception.py  model.py  order.py  pipeline.py  position.py  reporter.py  strategy.py  trader.py  transaction.py  trigger.py  util.py
tradingbot/data/: __init__.py  candlestick.py  core.py
tradingbot/exchange/: __init__.py  ccxt.py  core.py  fake.py
tradingbot/strategy/: __init__.py  core.py  smacross.py
tradingbot/ui/: app.py
tradingbot/ui/.streamlit/: config.toml
tradingbot/ui/application/: page_backtest.py  page_data.py
tradingbot/ui/setting/: page_config.py
